# privacy-preserving-auctions

./: .env  .gitignore  Cargo.toml  README.md  alice.json  auction.db-shm  auction.db-wal
.sqlx/: query-037a180bfec04ee234ed4ae31f43cce7eb580a8679dadecf9ab47658400ca2a8.json  query-0d2a389247684e9fbbed96a4067a6143f00173e23193079811c5e126cf2b9de5.json  query-1f800b28addde7fdd1dae1395894880ada5ec50ee1e5b173ce81778476480816.json  query-23168bf5a44ed6e6509d7137704083966f566112646837f2526f88ab2d24b325.json  query-322398564bd89333aac5f3ef5fa086604f3f2ec84923d092aa92d2149659965a.json  query-39c6dfd8f6f447a820283cdcceb94df2b3586d8363412d07af1b37c8e59b0fe9.json  query-42a84a15e4b0f30575efacdb6159db39f6922cff74d327f2c54afd022e38309a.json  query-49c6263e555dfe2effcf44c50ad439e145bcaea71bddbb86e19d5113d21cffad.json  query-4adc621619b705022896777ad272750a30e181d19d84106ac53898735330a094.json  query-5021b7758a78acd9869c2573a1c7d0e5b2ad1d2c539f396cace671ee79e6c9e5.json  query-53278ab55b61a55063739c4fa08a688a4ec077667fa64c55e840ecc3c86eb71e.json  query-589d8b773be07606ce748f45a0f68954c97ef991fee7c53ec6ccfccfd29f32ea.json  query-5d37032dc56e122e649260ae5e4d652e70c4e7050f15e630f5703bd6ebf7ed14.json  query-605e8d8a8417f795cd94af47677b8501195f9fa30bc9a5c8482d41587593875a.json  query-61f093e3c7f63f9741e717b5243603f04ee4351adbec91ebead5613bd44fac08.json  query-67921c2b2eae55873e841a243a91d2bb440beb157fa465e84c06141e5894045c.json  query-67927aee994471f5dc60b218cbfc6723c58844c88ead0c8b2537c7dd9570f286.json  query-69961f0ab45ac23cb352151ad9316d5ebe02982eba0dfd3bfa3efb41aa74fbbe.json  query-6d9c5a68224e693f4347f8952eee7ffc8c9786d29f49c9aebfb8077acaa0cbc2.json  query-79b76df65d979f8c4c18e49a1991c45d5c1d3662637ffcb692b3fc04a7755365.json  query-7c3d49f0eeac27276f0655c1d8ae72258ae14714017cafa421af042fcf79861b.json  query-7d9281ea60ec005e7d905cd908755cf25f4f895b8c46449c06b71467a60a8c76.json  query-870f08595f122cf1f09e11e270f7472c87f00c5d1afb289d287cb830fa04d2dc.json  query-9c63cb20ef228f12f05c51ce3c043a1f82a6eea4e6af9101afdd1a61326c7e6b.json  query-a4f6daa36e5b7b9f01fc23d0e730a9cc596e1b26270e22da783abf7a828b679d.json  query-a61c1decb7da3c6e9c96c9d651554b7e065b3bd930d0fdf3952c28643e70efc9.json  query-bf785020582ca9804bd6e6c6ca54f5a83c77d9f8b90bf41f6e067f2b0ab5202f.json  query-c2fc475bfdb86abc92318f96a23e814aed4501fb9969d61216541c4415379c63.json  query-d62fd498b584cdab6c8a8b2d63d1cbd00401780ef655283a2bdb1b0d7dacfa06.json  query-d8e85cc378558d3f4005fdd4c5f1ae829171f10770b0fd48cba1d0371c8de221.json  query-dd2c52648de18f619a7007543eff3ad55b97557daa5972c088ad6bad5abc741b.json  query-f84a9021bd89eebb08b54ae247f48a1faf03a81fc0ee3c0d011d2b843c8342a0.json
crates/auction-client/: Cargo.toml
crates/auction-client/src/: bid.rs  client.rs  errors.rs  identity.rs  lib.rs  main.rs  verify.rs
crates/auction-core/: Cargo.toml
crates/auction-core/src/: auction.rs  bid.rs  bulletin_board.rs  enums.rs  errors.rs  lib.rs  proof.rs  requests.rs  responses.rs  reveal.rs  user.rs
crates/auction-core/src/old-models/: bid.rs  bulletin_board.rs  enums.rs  proof.rs  requests.rs  reveal.rs
crates/auction-crypto/: Cargo.toml
crates/auction-crypto/src/: fiat_shamir.rs  hash_chain.rs  keys.rs  lib.rs  pedersen.rs  schnorr.rs  signature.rs
crates/auction-server/: Cargo.toml
crates/auction-server/src/: config.rs  errors.rs  main.rs  state.rs
crates/auction-server/src/api/: auctions.rs  auth.rs  bids.rs  bulletin_board.rs  mod.rs  proofs.rs  server_info.rs
crates/auction-server/src/api/old-api/: auction.rs  bid.rs
crates/auction-server/src/auth/: jwt.rs  middleware.rs  mod.rs
crates/auction-server/src/migrations/: 0001_initial.sql  0002_edit_auction_table.sql
crates/auction-server/src/models/: bb_payloads.rs  mod.rs
crates/auction-server/src/old-services/: auction_service.rs  mod.rs
crates/auction-server/src/services/: auction_service.rs  bid_service.rs  bulletin_board_service.rs  mod.rs  proof_service.rs  user_service.rs
crates/auction-server/src/services/old-services/: bulletin_board.rs
crates/auction-server/src/storage/: auction_repo.rs  bid_repo.rs  bulletin_board_repo.rs  mod.rs  proof_repo.rs  user_repo.rs
crates/auction-verifier/: Cargo.toml
crates/auction-verifier/src/: bulletin_board.rs  commitment.rs  lib.rs  loser.rs  transcript.rs  wasm.rs  winner.rs
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: app.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/auctions/[id]/: page.tsx
frontend/src/app/(app)/auctions/[id]/verify/: page.tsx
frontend/src/app/(app)/auctions/create/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/components/: AuctionCard.tsx  Navbar.tsx
frontend/src/components/auction/: AuctionHeader.tsx  BidsPanel.tsx  BulletinBoardPanel.tsx  LoserProofModal.tsx  PlaceBidModal.tsx  RevealModal.tsx  proofsPanel.tsx
frontend/src/components/ui/: Modal.tsx
frontend/src/components/verify/: TranscriptViewer.tsx  VerificationPanel.tsx
frontend/src/lib/: api.ts  crypto.ts  utils.ts  wasm.ts
frontend/src/store/: auctions.ts  auth.ts
frontend/src/types/: index.ts
server/: Cargo.toml
server/src/: main.rs
server/src/api/: bid.rs  mod.rs  register.rs  routes.rs
server/src/bulletin_board/: board.rs
server/src/crypto/: commitment.rs
server/src/models/: app_state.rs  auction.rs  bid.rs  bulletin_board.rs  certificate.rs  mod.rs  responses.rs  user.rs
server/src/services/: auction_service.rs  bid_service.rs  bulletin_board.rs  mod.rs
