[package]
name    = "auction-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
hex        = { workspace = true }
thiserror  = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx       = { workspace = true }