[package]
name    = "auction-crypto"
version = "0.1.0"
edition = "2026"

[dependencies]
curve25519-dalek = { workspace = true }
ed25519-dalek    = { workspace = true }
sha2             = { workspace = true }
sha3             = { workspace = true }
rand             = { workspace = true }
rand_core        = { workspace = true }
zeroize          = { workspace = true }
subtle           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
hex              = { workspace = true }
thiserror        = { workspace = true }