[package]
name    = "auction-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auction-server"
path = "src/main.rs"

[dependencies]
auction-core     = { workspace = true }
auction-crypto   = { workspace = true }
auction-verifier = { workspace = true }
axum             = { workspace = true }
axum-extra       = { workspace = true }
tower            = { workspace = true }
tower-http       = { workspace = true }
hyper            = { workspace = true }
tokio            = { workspace = true }
sqlx             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
hex              = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
jsonwebtoken     = { workspace = true }
argon2           = { workspace = true }
password-hash    = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy          = { workspace = true }
rand             = { workspace = true }
sha2             = { workspace = true }
subtle           = { workspace = true }