[package]
name    = "auction-verifier"
version = "0.1.0"
edition = "2026"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
auction-core   = { workspace = true }
auction-crypto = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
hex            = { workspace = true }
sha2           = { workspace = true }
subtle         = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen             = "0.2"
serde-wasm-bindgen       = "0.6"
js-sys                   = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]